springcloud-config 分布式配置文件

--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -1,4 +1,6 @@
+## 会下载client.properties配置文件
 spring.application.name: client
+
 spring.cloud.config.env:default
 spring.cloud.config.label:master
 spring.cloud.config.uri:http://localhost:10001
