--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -13,13 +13,14 @@
         <dependencies>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-config</artifactId>
+                <artifactId>spring-cloud-starter-parent</artifactId>
                 <version>Camden.SR3</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
         </dependencies>
     </dependencyManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
