--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -1,6 +1,15 @@
-## 会下载client.properties配置文件
-spring.application.name: client
+## 会下载client.properties配置文件 等同于spring.cloud.config.name
+spring.application.name=client
+#spring.cloud.config.name:client
+
+## 会下载*-development.properties配置文件 等同于spring.cloud.config.profile
+spring.profiles.active=development
+#spring.cloud.config.profile:development
 
 spring.cloud.config.env:default
-spring.cloud.config.label:master
 spring.cloud.config.uri:http://localhost:10001
+
+spring.cloud.config.label:master
+
+#server.port=10002
+#endpoints.restart.enabled=true
