--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,8 @@
     <modules>
         <module>config-server</module>
         <module>config-client</module>
+        <module>eureka-server</module>
+        <module>eureka-client</module>
     </modules>
 
     <parent>
