--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
         <module>config-client</module>
         <module>eureka-server</module>
         <module>eureka-client</module>
+        <module>app</module>
     </modules>
 
     <parent>
