--- a/app/src/main/resources/bootstrap.properties
+++ b/app/src/main/resources/bootstrap.properties
@@ -2,8 +2,8 @@
 spring.application.name=app
 #spring.cloud.config.name:client
 
-## 会下载*-development.properties配置文件 等同于spring.cloud.config.profile
-spring.profiles.active=dev1
+## 会下载*-dev.properties配置文件 等同于spring.cloud.config.profile
+spring.profiles.active=${profile:dev1}
 #spring.cloud.config.profile:development
 
 spring.cloud.config.env:default
