--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -3,7 +3,7 @@ spring.application.name=eureka-server
 
 ## 会下载*-dev2.properties配置文件 等同于spring.cloud.config.profile
 ## 修改该值完成集群配置
-spring.profiles.active=dev2
+spring.profiles.active=${profile:dev1}
 #spring.cloud.config.profile:dev2
 
 spring.cloud.config.env:default
