--- a/config-client/src/main/resources/bootstrap.properties
+++ b/config-client/src/main/resources/bootstrap.properties
@@ -1,9 +1,9 @@
 ## 会下载client.properties配置文件 等同于spring.cloud.config.name
-spring.application.name=client
+spring.application.name=config-client
 #spring.cloud.config.name:client
 
 ## 会下载*-development.properties配置文件 等同于spring.cloud.config.profile
-spring.profiles.active=development
+spring.profiles.active=${profile:dev1}
 #spring.cloud.config.profile:development
 
 spring.cloud.config.env:default
