--- a/config-server/src/main/resources/bootstrap.properties
+++ b/config-server/src/main/resources/bootstrap.properties
@@ -1,1 +1,2 @@
 spring.cloud.config.server.git.uri: https://git.coding.net/jtduan/config-file.git
+spring.cloud.config.server.git.searchPaths=cloud-config-repo
