--- a/eureka-client/src/main/resources/bootstrap.properties
+++ b/eureka-client/src/main/resources/bootstrap.properties
@@ -1,7 +1,7 @@
 ## 会下载client.properties配置文件
 spring.application.name: eureka-client
 
-spring.profiles.active=dev2
+spring.profiles.active=${profile:dev1}
 
 spring.cloud.config.env:default
 spring.cloud.config.label:master
