--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
 
     <groupId>cloud.jtduan</groupId>
     <artifactId>cloud</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>3.0-Final</version>
     <packaging>pom</packaging>
 
 
