--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-#server.port=9001
-##spring.application.name=eureka-server1
-##eureka.client.register-with-eureka=false
-##eureka.client.fetch-registry=false
-#
-#eureka.client.serviceUrl.defaultZone=http://peer2:9002/eureka/
-#eureka.instance.metadataMap.instanceId=${spring.application.name}:${random.value}
+server.port=9002
 
-#eureka.instance.hostname=peer2
+eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
+eureka.instance.metadataMap.instanceId=${random.value}
+eureka.instance.instanceId=${random.value}
 
 #---
 #server.port=9001
