--- a/eureka-server/src/main/resources/bootstrap.properties
+++ b/eureka-server/src/main/resources/bootstrap.properties
@@ -1,12 +1,13 @@
-spring.application.name=eureka-server
-#spring.cloud.config.name:client
+#spring.application.name=eureka-server
+##spring.cloud.config.name:client
+#
+### 会下载*-dev2.properties配置文件 等同于spring.cloud.config.profile
+### 修改该值完成集群配置
+#spring.profiles.active=${profile:dev1}
+##spring.cloud.config.profile:dev2
+#
+#spring.cloud.config.env:default
+#spring.cloud.config.uri:http://localhost:10001
+#spring.cloud.config.label:master
 
-## 会下载*-dev2.properties配置文件 等同于spring.cloud.config.profile
-## 修改该值完成集群配置
-spring.profiles.active=${profile:dev1}
-#spring.cloud.config.profile:dev2
-
-spring.cloud.config.env:default
-spring.cloud.config.uri:http://localhost:10001
-
-spring.cloud.config.label:master
+eureka.instance.instanceId=1
