--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -45,6 +45,12 @@
             <artifactId>spring-cloud-config-client</artifactId>
         </dependency>
 
+        <!--暴露各种指标-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
