添加监控系统

--- a/hystrix-dashboard/src/main/resources/bootstrap.properties
+++ b/hystrix-dashboard/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
-spring.application.name=eureka-server
+spring.application.name=hystrix
+
 spring.profiles.active=${profile:dev1}
 
 spring.cloud.config.env:default
