--- a/springboot-admin/src/main/resources/bootstrap.properties
+++ b/springboot-admin/src/main/resources/bootstrap.properties
@@ -1,6 +1,7 @@
-spring.application.name=eureka-server
+spring.application.name: spring-boot-admin
+
 spring.profiles.active=${profile:dev1}
 
 spring.cloud.config.env:default
-spring.cloud.config.uri:http://localhost:10001
 spring.cloud.config.label:master
+spring.cloud.config.uri:http://localhost:10001
