--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,8 +1,8 @@
-server.port=9002
-
-eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
-eureka.instance.metadataMap.instanceId=${random.value}
-eureka.instance.instanceId=${random.value}
+#server.port=9002
+#
+#eureka.client.serviceUrl.defaultZone=http://localhost:9001/eureka/
+#eureka.instance.metadataMap.instanceId=${random.value}
+#eureka.instance.instanceId=${random.value}
 
 #---
 #server.port=9001
